# secret-santa

./: .tarpaulin.toml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml  test-and-coverage.yml
front/: Cargo.toml  LICENSE-MIT  README.md  index.html
front/src/: api.rs  app.rs  components.rs  main.rs
icons/: santa.icns
scripts/: make_bundle_mac.sh
src/: lib.rs  main.rs
src/server/: error.rs  mod.rs  models.rs  routes.rs  utils.rs
