[package]
name = "secret-santa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "secret-santa"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.5"
actix-rt = "2.9.0"
actix-web = "4.4.0"
bore-cli = "0.5.0"
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.16.1", features = ["full"] }
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"

