[package]
name = "secrect-santa"
version = "0.1.0"
edition = "2021"
description = "My first try using Yew framework"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.11.0"
web-sys = { version="0.3.72", features=["console", "Document", "Element", "Event", "HtmlElement", "Node", "Window", "Navigator", "Clipboard"] }
wasm-bindgen = "0.2.79"
yew = { version="0.21", features=["csr"] }
wasm-bindgen-futures = "0.4.34"
reqwasm = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
yew-i18n = "0.1.2"
